// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectRecipient > should render disabled 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-0 border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100"
                  />
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default text-theme-secondary-text"
                    data-testid="SelectDropdown__input"
                    disabled=""
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient > should render empty 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-0 border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100"
                  />
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center cursor-pointer rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient > should render invalid 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              aria-invalid="true"
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
            data-testid="Input__addon-end"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="text-theme-danger-500"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-exclamation-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-8 w-8 px-2 py-1 text-sm ring-0 border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100"
                  />
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-invalid="true"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                  data-testid="Input__addon-end"
                >
                  <span
                    data-testid="Input__error"
                  >
                    <div
                      class="text-theme-danger-500"
                    >
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="circle-exclamation-mark"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="10"
                              r="9"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M10 10.5v-5"
                              stroke-linecap="round"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M10 14h0"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    class="pl-3"
                  >
                    <div
                      class="flex items-center cursor-pointer rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient > should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="relative flex w-full items-center text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="relative inline-flex items-center justify-center rounded-full align-middle transition-all duration-100 h-8 w-8 text-sm shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 193, 7)" width="100" height="100"/><circle r="45" cx="20" cy="40" fill="rgb(244, 67, 54)"/><circle r="35" cx="100" cy="70" fill="rgb(233, 30, 99)"/><circle r="55" cx="70" cy="50" fill="rgb(139, 195, 74)"/></svg>"
                        title="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value="bP6T9GQ3kqP6T9GQ3kqP6T9GQ3kqTTTP6T9GQ3kqT"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center cursor-pointer rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
